# django-historical-dates

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.rst  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md
historical_dates/: admin.py  apps.py  fields.py  forms.py  models.py  tests.py  utils.py
historical_dates/migrations/: 0001_initial.py  0002_alter_historicaldate_edtf_date.py
